syntax = "proto3";

option go_package = "pkg/grpc";

option java_multiple_files = true;
option java_package = "info.bati11.android.otameshi.grpc";
option java_outer_classname = "HelloProto";

package myapp;

service GreetingService {
  rpc Hello (HelloRequest) returns (HelloResponse);
  rpc HelloServerStream (HelloRequest) returns (stream HelloResponse);
  rpc HelloClientStream (stream HelloRequest) returns (HelloResponse);
  rpc HelloBiStreams (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
